# bevy

./: Cargo.toml
crates/bevy_app/src/: app.rs
crates/bevy_ecs/src/reflect/: mod.rs
crates/bevy_internal/: Cargo.toml
crates/bevy_reflect/: Cargo.toml
crates/bevy_reflect/derive/: Cargo.toml
crates/bevy_reflect/derive/src/: container_attributes.rs  lib.rs
crates/bevy_reflect/derive/src/impls/: enums.rs  mod.rs  structs.rs  tuple_structs.rs  values.rs
crates/bevy_reflect/src/: lib.rs  type_registry.rs
crates/bevy_remote/: Cargo.toml
crates/bevy_remote/src/: builtin_methods.rs
docs/: cargo_features.md
examples/reflection/: dynamic_types.rs  reflection.rs
examples/remote/: client.rs  server.rs
examples/scene/: scene.rs
