[package]
name = "bevy_remote"
version = "0.14.2"
edition = "2021"
description = "The Bevy Remote Protocol"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
readme = "README.md"

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.14.2" }
bevy_derive = { path = "../bevy_derive", version = "0.14.2" }
bevy_ecs = { path = "../bevy_ecs", version = "0.14.2", features = [
  "serialize",
] }
bevy_hierarchy = { path = "../bevy_hierarchy", version = "0.14.2" }
bevy_reflect = { path = "../bevy_reflect", version = "0.14.2" }
bevy_tasks = { path = "../bevy_tasks", version = "0.14.2" }
bevy_utils = { path = "../bevy_utils", version = "0.14.2" }

# other
anyhow = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smol = "2"
smol-hyper = "0.1"
http-body-util = "0.1"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[lib]
name = "bevy_remote"
path = "src/lib.rs"

[[example]]
name = "remote_server"
path = "examples/remote_server.rs"
